fix scrollbar styles

--- a/apps/large-trading-api-frontend/src/main/styles.scss
+++ b/apps/large-trading-api-frontend/src/main/styles.scss
@@ -28,8 +28,6 @@ p {
   background: linear-gradient(0deg, #b0b0b0, #636363);
 }
 
-/* For Firefox */
 * {
   scrollbar-width: 20px;
-  scrollbar-color: #888 #f1f1f1;
 }
